[workspace]
resolver = "2"
members = [
    "bark",
    "bark-core",
    "bark-protocol",
]

[workspace.dependencies]
bark-core = { path = "bark-core" }
bark-protocol = { path = "bark-protocol" }

bitflags = { version = "2.4", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive", "must_cast"] }
derive_more = { version = "0.99" }
heapless = "0.7"
log = "0.4"
thiserror = "1.0"
