[package]
name = "bark-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bark-protocol = { workspace = true }

bytemuck = { workspace = true }
derive_more = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
opus = "0.3.0"
thiserror = { workspace = true }
soxr = { git = "https://github.com/haileys/soxr-rs" }
