[package]
name = "bark-core"
version = "0.6.0"
edition = "2021"

[features]
opus = ["dep:opus"]

[dependencies]
bark-protocol = { workspace = true }

bytemuck = { workspace = true }
derive_more = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
opus = { version = "0.3", optional = true }
thiserror = { workspace = true }
soxr = { git = "https://github.com/haileys/soxr-rs" }
