[package]
name = "bark-device"
version = "0.0.0"
edition = "2021"

[dependencies]
bark-protocol = { workspace = true }
bark-util = { workspace = true }

cpal = { workspace = true }
derive_more = { workspace = true }
heapless = "0.7.16"
log = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
