[package]
name = "bark-device"
version = "0.0.0"
edition = "2021"

[dependencies]
bark-core = { workspace = true }
bark-protocol = { workspace = true }
bark-util = { workspace = true }

bytemuck = { workspace = true }
cpal = { workspace = true }
derive_more = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
futures = { workspace = true }

ringbuf = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
