[package]
name = "bark"
version = "0.6.0"
edition = "2021"

[features]
default = ["opus"]
opus = ["bark-core/opus"]

[dependencies]
bark-core = { workspace = true }
bark-protocol = { workspace = true }

alsa = "0.9"
bitflags = { workspace = true }
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
derive_more = { workspace = true }
env_logger = { version = "0.10", default-features = false, features = ["color", "auto-color", "humantime"] }
libc = "0.2.155"
log = { workspace = true }
nix = { version = "0.29", features = ["time", "socket", "net", "poll", "user", "hostname"], default-features = false }
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
socket2 = "0.5.3"
static_assertions = "1.1.0"
structopt = "0.3.26"
termcolor = "1.2.0"
thiserror = { workspace = true }
toml = "0.7.6"
xdg = "2.5.2"
